# selevator

./: .gitignore  CMakeLists.txt  README.design.md  README.md  config.h.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  dispatch.c  dispatch.h  elevator.c  elevator.h  mm.h  precomp.h
src/inc/: CMakeLists.txt  config.h  selevator.h
